--- a/home.css
+++ b/home.css
@@ -12,6 +12,7 @@ body {
 
 
 
+
 .carouselmain {
     padding-top: 5.7rem;
     background-color: black;
@@ -108,16 +109,6 @@ body {
 
 }
 
-#navtop {
-    justify-content: center;
-    padding-left: 50%;
-    padding-right: 50%;
-    margin-bottom: -6.1rem;
-
-
-
-}
-
 .navbar {
     background-color: black;
     border-bottom: solid rgb(78, 65, 21);
@@ -125,6 +116,17 @@ body {
 
 }
 
+.nav-link{
+    color: rgb(210, 168, 30);
+}
+
+ u {
+    font-family: oswald;
+    color: rgb(255, 255, 255);
+    font-weight: bolder;
+
+}
+ 
 .list-group-item {
     align-self: start;
 
@@ -142,7 +144,7 @@ footer {
     background-color: black;
 }
 
-/* About contact css */
+/*                     About contact css                   */
 
 #abtsec{
     /* background-color: rgb(173, 143, 9); */
