--- a/home.css
+++ b/home.css
@@ -154,12 +154,14 @@ footer {
 row-gap: 20px;
 justify-content: center;
 }
+#contacth4{
+    padding-top:-20rem;
+}
 
 #cardaccordion{
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 
 }
-
 #services{
     
     background-image: linear-gradient(to top, #0a67a5 0%, #330867 100%);
