--- a/home.css
+++ b/home.css
@@ -154,6 +154,11 @@ footer {
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 
 }
+#accordionhome{
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    margin-left: 7%;
+    margin-right: 7%;
+}
 #services{
     
     background-image: linear-gradient(to top, #0a67a5 0%, #330867 100%);
@@ -177,6 +182,16 @@ footer {
     background-color: black;
 }
 
-#contactrow{
+/* #contactrow{
     gap: 12px;
+    
+} */
+
+#beerman{
+    width: 350px;
+text-align: center;
+justify-content: center;
+position:relative;
+padding-left: 4rem;
+ 
 }
